--- a/aqr_momentum/main.ipynb
+++ b/aqr_momentum/main.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 3,
    "id": "7b1eec12",
    "metadata": {},
    "outputs": [],
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "621f87cf",
    "metadata": {},
    "outputs": [
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "91625f00",
    "metadata": {},
    "outputs": [
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 38,
    "id": "87ad2caa",
    "metadata": {},
    "outputs": [],
@@ -116,14 +116,50 @@
     "k = 2 #holding period of stock in months\n",
     "j = 3 #time horizon for when we check stock performance in months\n",
     "\n",
-    "start_date_str = \"2024-02-10\"\n",
+    "start_date_str = \"2023-04-15\"\n",
     "start_date_obj = datetime.strptime(start_date_str, \"%Y-%m-%d\")\n",
     "end_date_obj = start_date_obj +pd.DateOffset(years=1, months=0, days=0)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 27,
+   "id": "f37d7741",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "DatetimeIndex(['2023-04-12 00:00:00-04:00', '2023-04-13 00:00:00-04:00',\n",
+      "               '2023-04-14 00:00:00-04:00', '2023-04-17 00:00:00-04:00',\n",
+      "               '2023-04-18 00:00:00-04:00', '2023-04-19 00:00:00-04:00',\n",
+      "               '2023-04-20 00:00:00-04:00', '2023-04-21 00:00:00-04:00',\n",
+      "               '2023-04-24 00:00:00-04:00', '2023-04-25 00:00:00-04:00',\n",
+      "               ...\n",
+      "               '2025-03-31 00:00:00-04:00', '2025-04-01 00:00:00-04:00',\n",
+      "               '2025-04-02 00:00:00-04:00', '2025-04-03 00:00:00-04:00',\n",
+      "               '2025-04-04 00:00:00-04:00', '2025-04-07 00:00:00-04:00',\n",
+      "               '2025-04-08 00:00:00-04:00', '2025-04-09 00:00:00-04:00',\n",
+      "               '2025-04-10 00:00:00-04:00', '2025-04-11 00:00:00-04:00'],\n",
+      "              dtype='datetime64[ns, America/New_York]', name='Date', length=503, freq=None)\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "# print(start_date_obj)\n",
+    "# test_date = start_date_obj + pd.DateOffset(days=-1)\n",
+    "\n",
+    "# test_date\n",
+    "\n",
+    "GOOG = yf.Ticker('GOOG')\n",
+    "print(GOOG.history('2y').index)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "f4dab653",
    "metadata": {},
    "outputs": [],
@@ -132,16 +168,34 @@
     "\n",
     "\n",
     "def find_nearest_date(date):\n",
+    "    count = 0\n",
     "    '''We will use s&p 500 and find the closest date to when something is'''\n",
-    "    stock = yf.Ticker(\".INX\")\n",
+    "    stock = yf.Ticker(\"KO\")\n",
     "    df = stock.history('2y')\n",
     "    df.index = df.index.tz_localize(None)\n",
     "\n",
+    "  #  print(df)\n",
     "    if date in df.index:\n",
+    "        # print(\"wut\")\n",
     "        return date\n",
+    "    # print(\"here\")\n",
+    "    date_2 = date\n",
+    "    # print(\"her1\")\n",
+    "    while date not in df.index:\n",
+    "        count += 1\n",
+    "        date = date + pd.DateOffset(days=count)\n",
+    "        date_2 = date_2 + pd.DateOffset(days=-count)\n",
+    "\n",
+    "        # print(\"deb\", count, date, date_2)\n",
+    "        if date in df.index:\n",
+    "            # print('1')\n",
+    "            return date\n",
+    "        if date_2 in df.index:\n",
+    "            # print('2')\n",
+    "            return date_2\n",
+    "        #temp_date2 = date - pd.DateOffset()\n",
     "    \n",
-    "    #Finish this function to add/subtract dates.\n",
-    "    return -1\n",
+    "    \n",
     "\n",
     "\n",
     "\n",
@@ -171,37 +225,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 41,
    "id": "09afc06c",
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "$.INX: possibly delisted; no price data found  (period=2y) (Yahoo error = \"No data found, symbol may be delisted\")\n"
-     ]
-    },
-    {
-     "ename": "AttributeError",
-     "evalue": "'Index' object has no attribute 'tz_localize'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mAttributeError\u001b[39m                            Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[82]\u001b[39m\u001b[32m, line 3\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;66;03m#For all tickers, I will use #YYYY-MM-DD in string format!\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m3\u001b[39m start_date_obj = \u001b[43mfind_nearest_date\u001b[49m\u001b[43m(\u001b[49m\u001b[43mstart_date_obj\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m      4\u001b[39m end_date_obj = find_nearest_date(end_date_obj)\n\u001b[32m      7\u001b[39m \u001b[38;5;28mprint\u001b[39m(start_date_str, end_date_obj)\n",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[81]\u001b[39m\u001b[32m, line 8\u001b[39m, in \u001b[36mfind_nearest_date\u001b[39m\u001b[34m(date)\u001b[39m\n\u001b[32m      6\u001b[39m stock = yf.Ticker(\u001b[33m\"\u001b[39m\u001b[33m.INX\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m      7\u001b[39m df = stock.history(\u001b[33m'\u001b[39m\u001b[33m2y\u001b[39m\u001b[33m'\u001b[39m)\n\u001b[32m----> \u001b[39m\u001b[32m8\u001b[39m df.index = \u001b[43mdf\u001b[49m\u001b[43m.\u001b[49m\u001b[43mindex\u001b[49m\u001b[43m.\u001b[49m\u001b[43mtz_localize\u001b[49m(\u001b[38;5;28;01mNone\u001b[39;00m)\n\u001b[32m     10\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m date \u001b[38;5;129;01min\u001b[39;00m df.index:\n\u001b[32m     11\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m date\n",
-      "\u001b[31mAttributeError\u001b[39m: 'Index' object has no attribute 'tz_localize'"
+      "2023-04-15 00:00:00\n",
+      "here\n",
+      "her1\n",
+      "deb 1 2023-04-16 00:00:00 2023-04-14 00:00:00\n",
+      "2\n",
+      "New2023-04-14 00:00:00\n",
+      "wut\n",
+      "2023-04-15 2024-04-15 00:00:00\n",
+      "[['MMM', 0.1042129252724668]]\n"
      ]
     }
    ],
    "source": [
     "\n",
     "\n",
-    "\n",
     "#For all tickers, I will use #YYYY-MM-DD in string format!\n",
     "\n",
+    "print(start_date_obj)\n",
     "start_date_obj = find_nearest_date(start_date_obj)\n",
+    "print(f\"New{start_date_obj}\")\n",
     "end_date_obj = find_nearest_date(end_date_obj)\n",
     "\n",
     "\n",
@@ -217,11 +268,19 @@
     "    temp.append(i)\n",
     "    temp.append(get_returns(i))\n",
     "    ticker_with_return_list.append(temp)\n",
-    "    \n",
+    "    break\n",
     "print(ticker_with_return_list)\n",
     "\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1f4b6e8e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
